# agentCodingMonitor

./: .gitignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
apps/desktop/: index.html  package-lock.json  package.json  pnpm-lock.yaml
apps/desktop/src/: App.tsx  pickHudSource.ts  styles.css  types.ts  useMainWindowAutoSize.ts
apps/desktop/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
apps/desktop/src-tauri/binaries/: vibe-hook-aarch64-apple-darwin
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: generate-tray-icons.py  icon.icns
apps/desktop/src-tauri/src/: lib.rs  main.rs
crates/vibe-core/: Cargo.toml
crates/vibe-core/src/: api.rs  event.rs  install.rs  lib.rs  lite.rs  paths.rs  server.rs  state.rs  store.rs  types.rs
crates/vibe-core/tests/: install_merge.rs
crates/vibe-hook/: Cargo.toml
crates/vibe-hook/src/: main.rs
docs/: architecture.md  release.md
docs/plans/: fix-logo-drag-hooks.md  frosted-main-window.md  hook-command-path-quotes.md  idle-timeout-30s.md  mac-hud-presentation.md  minimal-hud-tray-menu.md  tray-brand-fixed-icon.md  tray-stateful-content.md  tray-template-icons.md  vibe-monitor-mvp.md
hooks/templates/: README.md  cursor-hooks.fragment.json
