[package]
name = "vibe-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Local daemon and session store for Vibe Monitor"

[dependencies]
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
chrono.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
thiserror.workspace = true
anyhow.workspace = true
directories.workspace = true
notify.workspace = true
axum.workspace = true
tower-http.workspace = true
uuid.workspace = true
async-stream = "0.3"
futures-util = { version = "0.3", default-features = false, features = ["std"] }

[dev-dependencies]
tempfile = "3"
reqwest = { workspace = true, features = ["blocking"] }
