[package]
name = "vibe-hook"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Hook reporter binary for Vibe Monitor"

[[bin]]
name = "vibe-hook"
path = "src/main.rs"

[dependencies]
serde.workspace = true
serde_json.workspace = true
reqwest = { workspace = true, features = ["blocking", "json", "rustls-tls"] }
directories.workspace = true
anyhow.workspace = true
