[package]
name = "vibe-monitor"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Vibe Monitor desktop app"

[lib]
name = "vibe_monitor_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
vibe-core = { path = "../../../crates/vibe-core" }
tauri = { version = "2", features = ["tray-icon", "image-png", "macos-private-api"] }
tauri-plugin-shell = "2"
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
anyhow.workspace = true
open = "5"
rfd = "0.15"
window-vibrancy = "0.6"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-autostart = "2"
